Fix lỗi không chỉnh được role cho trang Admin, fix logic register account

--- a/DoAnMon/Views/ClassRooms/Details.cshtml
+++ b/DoAnMon/Views/ClassRooms/Details.cshtml
@@ -138,7 +138,7 @@
 			color: #666;
 		}
 
-	/* CHAT - Thảo luận */
+	/* CHAT - Th?o lu?n */
 
 	.chat-container {
 		max-width: 100%;
@@ -150,16 +150,16 @@
 
 	.chat-messages {
 		max-height: 100%;
-		/* Chiều cao tối đa của phần hiển thị tin nhắn */
+		/* Chi?u cao t?i da c?a ph?n hi?n th? tin nh?n */
 		overflow-y: auto;
-		/* Tạo thanh cuộn khi cần thiết */
+		/* T?o thanh cu?n khi c?n thi?t */
 		padding: 10px;
 		border-bottom: 1px solid #ccc;
 	}
 
 	.message-form-container {
 		margin-top: 10px;
-		/* Khoảng cách giữa phần hiển thị và phần nhập */
+		/* Kho?ng cách gi?a ph?n hi?n th? và ph?n nh?p */
 	}
 
 	.message-form {
@@ -189,13 +189,13 @@
 			background-color: #0056b3;
 		}
 
-	/* THÔNG TIN GIẢNG VIÊN */
+	/* THÔNG TIN GI?NG VIÊN */
 	.teacher-info {
 		background-color: #f9f9f9;
 		padding: 20px;
 		border-radius: 10px;
 		box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-		/* Thêm bóng đổ */
+		/* Thêm bóng d? */
 	}
 
 	.teacher-details {
@@ -209,7 +209,7 @@
 		border-radius: 50%;
 		margin-right: 20px;
 		box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-		/* Thêm bóng đổ */
+		/* Thêm bóng d? */
 		object-fit: cover;
 	}
 
@@ -226,7 +226,7 @@
 				color: #e72323;
 			}
 
-	/* POST BÀI GIẢNG */
+	/* POST BÀI GI?NG */
 	.post {
 		margin-bottom: 20px;
 		padding: 20px;
@@ -257,7 +257,7 @@
 			height: 100%;
 		}
 
-	/* BÀI TẬP */
+	/* BÀI T?P */
 	.assignment {
 		background-color: #f9f9f9;
 		padding: 20px;
@@ -266,7 +266,7 @@
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
-		border: 1px solid #ccc; /* Thêm viền */
+		border: 1px solid #ccc; /* Thêm vi?n */
 	}
 
 	.assignment-content {
@@ -345,7 +345,7 @@
 
 	.btn {
 		width: 100%;
-		max-width: 200px; /* Đảm bảo nút không quá rộng */
+		max-width: 200px; /* Ð?m b?o nút không quá r?ng */
 	}
 
 	/*======================B?ng di?m======================*/
