--- a/DoAnMon/Views/Schedule/Index.cshtml
+++ b/DoAnMon/Views/Schedule/Index.cshtml
@@ -1,11 +1,14 @@
-﻿@using static DoAnMon.Models.ClassroomViewModel
+﻿@using DoAnMon.IdentityCudtomUser
+@using Microsoft.AspNetCore.Identity
+@using static DoAnMon.Models.ClassroomViewModel
 @model List<ClassRoomViewModel>
+@inject UserManager<CustomUser> _userManager
 
 @{
     ViewData["Title"] = "Thời khoá biểu";
     Layout = "~/Views/Shared/_Layout.cshtml";
     List<DiemDanh> listdiemdanh = ViewBag.diemDanh as List<DiemDanh>;
-
+    var user = await _userManager.GetUserAsync(User);
 }
 
 <script src='https://cdn.jsdelivr.net/npm/fullcalendar-scheduler@6.1.15/index.global.min.js'></script>
@@ -89,10 +92,11 @@
                                         start: '@date.Start.ToString("yyyy-MM-ddTHH:mm:ss")',
                                         end: '@date.End.ToString("yyyy-MM-ddTHH:mm:ss")',
                                         backgroundColor: '#@color', // Sử dụng giá trị màu sắc đã xác định
-                                        url: '@Url.Action("Details", "ClassRooms", new { id = classroom.ClassRoom.Id })',
+                                        url: "@classroom.ClassRoom.RoomOnline&User=@user.Id&class=@classroom.ClassRoom.Id",
                                         tooltip: '@tooltipValue',
                                         extendedProps: {
-                                            tooltip: '@tooltipValue' // Sử dụng extendedProps để lưu tooltip
+                                            tooltip: '@tooltipValue', // Sử dụng extendedProps để lưu tooltip
+                                            classId: '@classroom.ClassRoom.Id'
                                         }
                                     },
                         </text>
@@ -101,8 +105,20 @@
             ],
             eventClick: function (info) {
                 // Điều hướng đến trang chi tiết lớp học
-                window.location.href = info.event.url;
-                info.jsEvent.preventDefault(); // Ngăn hành vi mặc định của thẻ <a> nếu có
+                const classId = info.event.extendedProps.classId;
+                info.jsEvent.preventDefault();
+                $.post("/ClassRooms/DiemDanhIn", { classId: classId }, function (data) {
+                    if (data.success) {
+                        console.log('Điểm danh thành công');
+                        window.open(info.event.url, '_blank');
+                    }
+                    else {
+                        console.log(data.error);
+                        alert(data.error);
+                        console.log('Điểm danh thất bại');
+                    }
+                });
+                 // Ngăn hành vi mặc định của thẻ <a> nếu có
             },
             eventDidMount: function (info) {
                 // Tạo tooltip cho từng sự kiện
