Fix lỗi của upload bai giảng và load lại component khi upload bai giảng

--- a/DoAnMon/Views/ClassRooms/Details.cshtml
+++ b/DoAnMon/Views/ClassRooms/Details.cshtml
@@ -1493,6 +1493,7 @@
 	r.on('fileSuccess', function (file, message) {
 		console.log('Hoàn thành upload file:', file.fileName);
 		resetFileName()
+		reloadLecture()
 	});
 
 	// Xử lý lỗi
